skins/columns/css/style.css
/* =====================
TILE Project
Copyright 2010 MITH

Written by Elisabeth Kvernen
Maryland Institute for Technology in the Humanities

swatch colors
------------------
f6ecd4 - cream 1
f2e4c2 - cream 2
ccbb93 - tan 1
564a25 - tan 2
e6e7b8 - green 1
dadb9d - green 2
afbf37 - green 3
14253d - dark blue
41475b - almost dark blue
======================== */

/* Yahoo CSS Reset */
body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td { 
	margin:0;
	padding:0;
}
table {
	border-collapse:collapse;
	border-spacing:0;
}
fieldset,img { 
	border:0;
}
address,caption,cite,code,dfn,em,strong,th,var {
	font-style:normal;
	font-weight:normal;
}
ol,ul {
	list-style:none;
}
caption,th {
	text-align:left;
}
h1,h2,h3,h4,h5,h6 {
	font-size:100%;
	font-weight:normal;
}
q:before,q:after {
	content:'';
}
abbr,acronym { border:0;
}
div a { overflow: hidden; } /* makes negative text indent outline show up only around "a" link */

/* General styles ------------------- */
body {
	bottom:0;
	left:0;
	margin:0;
	overflow:hidden;
	position:absolute;
	right:0;
	top:0;
	color:#41475b;
	font-family:Helvetica, Arial, Verdana, sans-serif;
	font-size:90%;
	line-height:1.5em;
	background:#fffaef url('../images/bkgd.gif');
}
.az {
	bottom:0;
	left:0;
	overflow:visible;
	position:absolute;
	right:0;
	top:0;
}
h1 {
	font-size:2em;
}
h2 {
	font-size:1.4em;
}
h3 {
	font-size:1.25em;
}
h4 {
	font-size:1em;
}
p {
	font-size:1em;
}
a {
	color:#41475b;
	text-decoration:none;
}
a:hover {
	color:#061224;
	border-bottom:1px dashed #14253d;
}
/* ------ MISC --------- */
#srcImageForCanvas {
	display:block;
}
.submitFormHidden {
	display:none;
}


/* Clearfix styles--------- */
.clear {
    clear: both;
    display: block;
    overflow: hidden;
    visibility: hidden;
    width: 0;
    height: 0
}
.clearfix:after {
    clear: both;
    content: ' ';
    display: block;
    font-size: 0;
    line-height: 0;
    visibility: hidden;
    width: 0;
    height: 0
} 
* html .clearfix {
    height: 1%
}
/* Header styles ------------------- */
.header {
	bottom:auto;
	opacity:1;
	z-index:2;
}
.header .logo {
	padding:10px;
	left:0;
	width:280px;
}
.header .globalmenu {
	padding:25px 10px 10px 10px;
	right:0;
	left:auto;
	text-align:right;
}
.version {
	font-style:italic;
	font-size:85%;
}
.header .globalmenu .globalbuttons{
	
}
.header .globalmenu .globalbuttons .modeitems{
	-webkit-border-radius: 10px;
	    -moz-border-radius: 10px;
	    border-radius: 10px;
	    background-color: #EAEDBA;
	    border: 1px solid #FFFFFF;
	    float: left;
	    margin-right: 15px;
	    margin-top: -10px;
	    overflow: auto;
	    padding: 10px 0 10px 10px;
}
.header .globalmenu .globalbuttons .dataitems{
	float:left;
	
}
.header .globalmenu .globalbuttons .misc{
	
}
.header .globalmenu .globalbuttons .modeitems .menuitem {}
.header .globalmenu .globalbuttons .dataitems .menuitem {}
.header .globalmenu .globalbuttons .misc .menuitem {
	float: right;
	   margin-top: 5px;
}
.header .globalmenu .globalbuttons div {}
#tilehelp{
	border-bottom: 1px dashed #14253D;
}
/* Main area styles ------------------- */
.main {
	top:75px;
	height:auto;
	opacity:1;
	z-index:1;
}
.log {
	right:auto;
	opacity:1;
	z-index:3;
	min-width:445px;
	height:50%;
}
.log.max {
	right:auto;
	opacity:1;
	z-index:3;
	min-width:445px;
	height:90%;
}
.activeBox{
	width:40%;
	top:50%;
	min-width:445px;
	right:auto;
	opacity:1;
	z-index:3;
	min-width:445px;
}
/**added to create 'minimize' effect**/
.activeBox.closed{
	width:40%;
	top:90%;
	min-width:445px;
	right:auto;
	opacity:1;
	z-index:3;
	min-width:445px;
	overflow:hidden;
}
.activeBox.closed ul {
	overflow:hidden;
}
#activeBox_min {
	margin:2px;
}
#activeBox_min.btnIconLarge, #minInfo.btnIconLarge {
	background:url('../images/iconsSpriteLarge.gif') no-repeat -338px -21px;
}
#activeBox_min.btnIconLarge:hover, #minInfo.btnIconLarge:hover {
	background:url('../images/iconsSpriteLarge.gif') no-repeat -338px -0px;
}
.activeBox.closed #activeBox_min.btnIconLarge, .infoItem.closed #minInfo.btnIconLarge {
	background:url('../images/iconsSpriteLarge.gif') no-repeat -359px -21px;
}
.activeBox.closed #activeBox_min.btnIconLarge:hover, .infoItem.closed #minInfo.btnIconLarge:hover {
	background:url('../images/iconsSpriteLarge.gif') no-repeat -359px -0px;
}
.tool {
	right:auto;
	opacity:1;
	z-index:2;
	min-width:430px;
}
.content {
	right:0;
	opacity:1;
	z-index:1;
	min-width:630px;
}
.contentclone {
	right:0;
	opacity:1;
	z-index:1;
}
.inner {
	margin:3px 3px 5px 3px;
	border:1px solid #d5db97;
	height:auto;
	background:#fff;
}
.btnIcon {
	width:15px;
	height:15px;
	display:inline-block;
	border:1px solid #fff;
}
.btnIconLarge {
	width:19px;
	height:19px;
	display:inline-block;
	border:1px solid #fff;
}
a.btnIconLarge:hover {
	border-bottom:1px solid transparent;
}
.workspace{
	position:absolute;
	overflow:auto;
}
.vd-container{
	z-index:1032;
}
/**specific to the content area**/


/* Dropdown and menu styles --------------- */
.button {
	padding:2px 7px;
	background:#e7dab9 url('../images/bkgd_btn.jpg') repeat-x;
	border:1px solid #ccbb93;
	margin:0;
	cursor:pointer;	
	width:auto;
}
.button.inactive, .button.inactive:hover {
	color:#c7c3b5;
	border:1px solid #FDFDEC;
	background:#e7dab9 url('../images/bkgd_btn.jpg') repeat-x;
	cursor:default;
}
.button:hover {
	background:#FDFDEC url('../images/bkgd_btn-hover.jpg') repeat-x;
	border-bottom:1px solid #ccbb93;
}
.button.active {
	background:#FDFDEC url('../images/bkgd_btn-active.jpg') repeat-x;
	border-bottom:1px solid #ccbb93;
}
.button.shape {
	float:left;
}
.button.shape.delete{
	float:right;
	margin-left:10px;
}
.menuitem {
	margin-right:10px;
	display:inline;
	float:left;
	position:relative;
}
.menuitem li, .menuitem p {
	padding-right:5px;
}
.menuitem p {
	margin-left:5px;
}
.ddown {
	display: inline;
	height:19px;
	position:relative;
}
/* ... */

